--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -294,6 +294,7 @@
         "from sklearn.svm import SVC\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "# some code from https://www.numpyninja.com/post/polynomial-linear-regression-explained-with-an-example\n",
         "#Scale data\n",
         "sc = StandardScaler()\n",
         "x_train_poly = sc.fit_transform(X_train)\n",
